sub-bullet spacing fix

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,3 +1,11 @@
 #resume > div:nth-child(5) > div.column.column-3-5 > section:nth-child(1) > section:nth-child(2) > ul > li:nth-child(3) > ul{
     margin-bottom:0.25rem !important;
 }
+
+#resume > div:nth-child(5) > div.column.column-3-5 > section:nth-child(1) > section:nth-child(4) > ul > li:nth-child(2) > ul{
+    margin-bottom:0.25rem !important;
+}
+
+#resume > div:nth-child(5) > div.column.column-3-5 > section:nth-child(1) > section:nth-child(7) > ul > li:nth-child(3) > ul{
+    margin-bottom:0.25rem !important;
+}
